src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GL46C_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GL46C_StringErrorContext.class */
public final class GL46C_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglMultiDrawArraysIndirectCount(IJJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glMultiDrawArraysIndirectCount(ILjava/nio/ByteBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glMultiDrawArraysIndirectCount(IJJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glMultiDrawArraysIndirectCount(ILjava/nio/IntBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("nglMultiDrawElementsIndirectCount(IIJJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glMultiDrawElementsIndirectCount(IILjava/nio/ByteBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glMultiDrawElementsIndirectCount(IIJJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glMultiDrawElementsIndirectCount(IILjava/nio/IntBuffer;JII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glPolygonOffsetClamp(FFF)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("nglSpecializeShader(IJIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glSpecializeShader(ILjava/nio/ByteBuffer;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glSpecializeShader(ILjava/lang/CharSequence;Ljava/nio/IntBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glMultiDrawArraysIndirectCount(I[IJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glMultiDrawElementsIndirectCount(II[IJII)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glSpecializeShader(ILjava/nio/ByteBuffer;[I[I)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        methods.put("glSpecializeShader(ILjava/lang/CharSequence;[I[I)V", "net/labymod/core/laby3d/opengl/error/generated/GL46CErrorContext");
        return methods;
    }
}
